objects/IntegracaoERP__mdt.object
<CustomObject>
    <label>Integração ERP</label>
    <pluralLabel>Integrações ERP</pluralLabel>
    <fields>
        <fullName>Ativo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ativo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Senha__c</fullName>
        <label>Senha</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usuario__c</fullName>
        <label>EmailAddress ( usuario )</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointObterToken__c</fullName>
        <label>Endpoint Obter Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointBuscaContas__c</fullName>
        <label>Endpoint de Busca de contas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointCriacaoPedido__c</fullName>
        <label>End Point Criação Pedido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointConsultaDANFE__c</fullName>
        <label>Endpoint Consulta DANFE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointInsertCotacao__c</fullName>
        <label>Endpoint Insert Cotação</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointInsertParceiro__c</fullName>
        <label>Endpoint Insert Parceiro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointUpdateParceiro__c</fullName>
        <label>Endpoint Update Parceiro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointCancelamentoPedido__c</fullName>
        <label>End Point Cancelamento Pedido</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointCriacaoProdutoConta__c</fullName>
        <label>End Point Criação Produto Conta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>